--- a/package.json
+++ b/package.json
@@ -4,11 +4,49 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "nx": "15.9.4"
+    "@babel/preset-react": "^7.14.5",
+    "@nrwl/cypress": "15.2.1",
+    "@nrwl/eslint-plugin-nx": "15.9.4",
+    "@nrwl/jest": "15.2.1",
+    "@nrwl/js": "15.9.4",
+    "@nrwl/linter": "15.9.4",
+    "@nrwl/next": "^15.9.4",
+    "@nrwl/react": "15.9.4",
+    "@nrwl/web": "15.2.1",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "28.1.1",
+    "@types/node": "18.14.2",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "babel-jest": "28.1.1",
+    "cypress": "^11.0.0",
+    "eslint": "~8.15.0",
+    "eslint-config-next": "13.1.1",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
+    "nx": "15.9.4",
+    "prettier": "^2.6.2",
+    "react-test-renderer": "18.2.0",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
+    "typescript": "~4.9.5"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "next": "13.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tslib": "^2.3.0"
+  }
 }
