Workspace init and deploy

--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,43 @@
         "style": "css",
         "linter": "eslint"
       }
+    },
+    "@ensono-stacks/workspace": {
+      "init": {
+        "pipelineRunner": "taskctl"
+      }
+    }
+  },
+  "stacks": {
+    "config": {
+      "business": {
+        "company": "amido",
+        "domain": "stacks",
+        "component": "core"
+      },
+      "domain": {
+        "internal": "nonprod.amidostacks.com",
+        "external": "prod.amidostacks.com"
+      },
+      "cloud": {
+        "platform": "azure",
+        "region": "euw",
+        "group": "amido-stacks-nonprod-euw-core"
+      },
+      "pipeline": "azdo",
+      "terraform": {
+        "group": "Stacks-Ancillary-Resources",
+        "storage": "amidostackstfstate",
+        "container": "tfstate"
+      },
+      "vcs": {
+        "type": "github",
+        "url": "https://github.com/amido/cycle-11-multi-app-test.git"
+      }
+    },
+    "executedGenerators": {
+      "project": {},
+      "workspace": ["WorkspaceInit", "WorkspaceDeployment"]
     }
   },
   "extends": "nx/presets/npm.json"
