--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,24 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
-  "plugins": ["@nrwl/nx"],
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "airbnb/base",
+    "plugin:prettier/recommended",
+    "plugin:unicorn/recommended",
+    "plugin:compat/recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
+    "plugin:security/recommended"
+  ],
+  "plugins": ["@nrwl/nx", "@typescript-eslint", "import", "security"],
+  "settings": {
+    "import/resolver": {
+      "typescript": {
+        "project": "tsconfig.base.json"
+      }
+    }
+  },
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
@@ -18,13 +35,84 @@
               }
             ]
           }
+        ],
+        "import/order": [
+          "error",
+          {
+            "groups": [
+              ["builtin", "external"],
+              ["parent", "internal", "sibling", "index"]
+            ],
+            "pathGroups": [
+              {
+                "pattern": "@undefined/**",
+                "group": "internal"
+              }
+            ],
+            "alphabetize": {
+              "order": "asc"
+            },
+            "newlines-between": "always"
+          }
+        ],
+        "import/no-extraneous-dependencies": "off",
+        "import/prefer-default-export": "off",
+        "import/extensions": [
+          "error",
+          "always",
+          {
+            "ts": "never",
+            "tsx": "never",
+            "js": "never",
+            "jsx": "never"
+          }
+        ],
+        "no-console": "off",
+        "no-duplicate-imports": "error",
+        "no-irregular-whitespace": "error",
+        "no-shadow": "off",
+        "no-use-before-define": "off",
+        "no-restricted-exports": "off",
+        "security/detect-object-injection": "off",
+        "unicorn/no-array-reduce": "off",
+        "unicorn/no-null": "off",
+        "unicorn/prefer-module": "off",
+        "unicorn/filename-case": "off",
+        "unicorn/no-array-for-each": "off",
+        "unicorn/no-for-loop": "off",
+        "unicorn/prevent-abbreviations": [
+          "error",
+          {
+            "allowList": {
+              "getServerSideProps": true,
+              "getStaticProps": true
+            },
+            "replacements": {
+              "env": {
+                "environment": false
+              }
+            }
+          }
         ]
       }
     },
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nrwl/nx/typescript"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-unsafe-call": "off",
+        "@typescript-eslint/no-unsafe-assignment": "off",
+        "@typescript-eslint/no-unsafe-member-access": "off",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/interface-name-prefix": "off",
+        "@typescript-eslint/no-use-before-define": ["error"],
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-shadow": "error",
+        "unicorn/prefer-node-protocol": "off"
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
@@ -37,6 +125,17 @@
         "jest": true
       },
       "rules": {}
+    },
+    {
+      "files": "*.json",
+      "parser": "jsonc-eslint-parser",
+      "rules": {}
+    },
+    {
+      "files": "jest.config.ts",
+      "rules": {
+        "unicorn/no-abusive-eslint-disable": "off"
+      }
     }
   ]
 }
