--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,13 @@
     "plugin:import/typescript",
     "plugin:security/recommended"
   ],
-  "plugins": ["@nrwl/nx", "@typescript-eslint", "import", "security"],
+  "plugins": [
+    "@nrwl/nx",
+    "@typescript-eslint",
+    "import",
+    "security",
+    "cypress"
+  ],
   "settings": {
     "import/resolver": {
       "typescript": {
@@ -98,7 +104,7 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "extends": ["plugin:@nrwl/nx/typescript"],
+      "extends": ["plugin:@nrwl/nx/typescript", "plugin:cypress/recommended"],
       "rules": {
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-explicit-any": "off",
