--- a/apps/next-application-for-cypress/tsconfig.json
+++ b/apps/next-application-for-cypress/tsconfig.json
@@ -19,5 +19,10 @@
     "jest.config.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.ts"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.cy.json"
+    }
   ]
 }
