--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,16 @@ Thumbs.db
 
 # Cypress
 **/test-results
+
+# Terraform
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
