--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@commitlint/config-nx-scopes": "^17.2.0",
     "@commitlint/cz-commitlint": "^17.3.0",
     "@ensono-stacks/cypress": "file:C:\\Users\\dphillips\\Documents\\code\\stacks-nx-plugins\\dist\\packages\\cypress\\ensono-stacks-cypress-0.0.0.tgz",
+    "@ensono-stacks/next": "^1.7.2",
     "@ensono-stacks/playwright": "^0.4.2",
     "@ensono-stacks/workspace": "^0.6.2",
+    "@jscutlery/semver": "2.29.0",
     "@nrwl/cypress": "15.9.4",
     "@nrwl/eslint-plugin-nx": "15.9.4",
     "@nrwl/jest": "15.2.1",
@@ -23,12 +25,14 @@
     "@nrwl/next": "^15.9.4",
     "@nrwl/react": "15.9.4",
     "@nrwl/web": "15.2.1",
+    "@nx-tools/container-metadata": "4.0.2",
+    "@nx-tools/nx-container": "4.0.2",
     "@testing-library/react": "14.0.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.51.0",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
     "commitizen": "^4.2.5",
@@ -47,6 +51,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-security": "1.4.0",
+    "eslint-plugin-testing-library": "5.9.1",
     "eslint-plugin-unicorn": "37.0.1",
     "husky": "^8.0.2",
     "jest": "28.1.1",
