--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,6 @@
 # Add files here to ignore them from prettier formatting
 /dist
 /coverage
+
+# helm yaml
+libs/next-helm-chart/build/helm/**/*.yaml
