Workaround for isolated modules

--- a/apps/next-application-for-cypress/tsconfig.cy.json
+++ b/apps/next-application-for-cypress/tsconfig.cy.json
@@ -5,7 +5,8 @@
     "outDir": "../../dist/out-tsc",
     "allowJs": true,
     "types": ["cypress", "node"],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "isolatedModules": false,
   },
   "include": ["cypress/**/*.ts", "cypress/**/*.js", "cypress.config.ts"]
 }
