feat(next-application-for-cypress): update deploy reqs

--- a/taskctl.yaml
+++ b/taskctl.yaml
@@ -20,6 +20,8 @@ pipelines:
       depends_on: lint
     - task: e2e:ci
       depends_on: build
+    - task: html
+      depends_on: e2e:ci
     - task: version
       depends_on: e2e:ci
   nonprod:
@@ -30,6 +32,8 @@ pipelines:
       depends_on: build:ci
     - task: e2e:ci
       depends_on: test:ci
+    - task: html
+      depends_on: e2e:ci
     - task: version:nonprod
       depends_on: e2e:ci
     - task: terraform:nonprod
@@ -42,6 +46,8 @@ pipelines:
       depends_on: build:ci
     - task: e2e:ci
       depends_on: test:ci
+    - task: html
+      depends_on: e2e:ci
     - task: version:prod
       depends_on: e2e:ci
     - task: terraform:prod
