--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,13 +11,7 @@
     "plugin:import/typescript",
     "plugin:security/recommended"
   ],
-  "plugins": [
-    "@nrwl/nx",
-    "@typescript-eslint",
-    "import",
-    "security",
-    "cypress"
-  ],
+  "plugins": ["@nrwl/nx", "@typescript-eslint", "import", "security"],
   "settings": {
     "import/resolver": {
       "typescript": {
@@ -104,7 +98,7 @@
     },
     {
       "files": ["*.ts", "*.tsx"],
-      "extends": ["plugin:@nrwl/nx/typescript", "plugin:cypress/recommended"],
+      "extends": ["plugin:@nrwl/nx/typescript"],
       "rules": {
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-explicit-any": "off",
