refactor(next-cypress-application): rename

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "@ensono-stacks/cypress": "file://C:\\Users\\dphillips\\Documents\\code\\stacks-nx-plugins\\dist\\packages\\cypress\\ensono-stacks-cypress-0.0.1.tgz"
   },
   "workspaces": [
     "packages/*"
