feat(next-cypress-application): Add cypress

--- a/apps/next-cypress-application/tsconfig.json
+++ b/apps/next-cypress-application/tsconfig.json
@@ -26,5 +26,10 @@
     "jest.config.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.ts"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.cy.json"
+    }
   ]
 }
