--- a/apps/next-cypress-application/.eslintrc.json
+++ b/apps/next-cypress-application/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": [
+    "plugin:cypress/recommended",
     "plugin:@nrwl/nx/react-typescript",
     "next",
     "next/core-web-vitals",
@@ -22,6 +23,10 @@
     },
     {
       "files": ["*.js", "*.jsx"],
+      "rules": {}
+    },
+    {
+      "files": ["*.cy.{ts,js,tsx,jsx}", "cypress/**/*.{ts,js,tsx,jsx}"],
       "rules": {}
     }
   ],
