--- a/apps/next-cypress-application/project.json
+++ b/apps/next-cypress-application/project.json
@@ -59,6 +59,35 @@
           "apps/next-cypress-application/**/*.{ts,tsx,js,jsx}"
         ]
       }
+    },
+    "e2e": {
+      "executor": "@nrwl/cypress:cypress",
+      "options": {
+        "cypressConfig": "apps/next-cypress-application/cypress.config.ts",
+        "testingType": "e2e",
+        "devServerTarget": "next-cypress-application:serve"
+      },
+      "configurations": {
+        "production": {
+          "devServerTarget": "next-cypress-application:serve:production"
+        }
+      }
+    },
+    "html-report": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          "mochawesome-merge reports-json-file/*.json>merged-html-report.json",
+          "marge merged-html-report.json --reportDir ./ --inline"
+        ],
+        "parallel": false,
+        "cwd": "apps/next-cypress-application/cypress/test-results/downloads"
+      },
+      "configurations": {
+        "ci": {
+          "cwd": "apps/next-cypress-application/../../test-results/next-cypress-application/downloads"
+        }
+      }
     }
   },
   "tags": []
