--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@commitlint/config-nx-scopes": "^17.2.0",
     "@commitlint/cz-commitlint": "^17.3.0",
+    "@cypress/grep": "^3.1.5",
     "@ensono-stacks/next": "^1.7.2",
     "@ensono-stacks/workspace": "^0.6.2",
     "@jscutlery/semver": "2.29.0",
