--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@nrwl/jest": "15.2.1",
     "@nrwl/js": "15.9.4",
     "@nrwl/linter": "15.9.4",
-    "@nrwl/next": "^15.9.4",
     "@nrwl/react": "15.9.4",
     "@nrwl/web": "15.2.1",
     "@nx-tools/container-metadata": "4.0.2",
@@ -69,6 +68,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@nrwl/next": "15.9.4",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
